@@ -1,3 +1,7 @@
+2004-04-27  John Luke  <jluke@cfl.rr.com>
+
+	* en/Gdk/Threads.xml: document
+
 2004-04-12  Mike Kestner  <mkestner@ximian.com>
 
 	* en/GLib/Object.xml : some more docs for the Raw property.
